RESOLVED FIXED269737
[WebGPU] crash in RemoteTexture::createView
https://bugs.webkit.org/show_bug.cgi?id=269737
Summary [WebGPU] crash in RemoteTexture::createView
Mike Wyrzykowski
Reported 2024-02-19 12:22:04 PST
[WebGPU] crash in RemoteTexture::createView
Attachments
Mike Wyrzykowski
Comment 1 2024-02-19 12:22:23 PST
Mike Wyrzykowski
Comment 2 2024-02-19 12:30:10 PST
EWS
Comment 3 2024-02-19 23:42:32 PST
Committed 275025@main (0e1973799e7a): <https://commits.webkit.org/275025@main> Reviewed commits have been landed. Closing PR #24764 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.