[WebGPU] crash in RemoteTexture::createView https://bugs.webkit.org/show_bug.cgi?id=269737 <radar://123086999>

Reviewed by Dan Glastonbury.

There is no need to derefrence this optional value since a compromised
web process could set an nullopt descriptor and the member function
further down in the stack correctly handles a missing descriptor.

* Source/WebKit/GPUProcess/graphics/WebGPU/RemoteTexture.cpp:
(WebKit::RemoteTexture::createView):

Canonical link: https://commits.webkit.org/275025@main